fixed an issue where background image wasnt covering page

--- a/app/assets/stylesheets/media.css
+++ b/app/assets/stylesheets/media.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 1024px) {
+  body {
+    background-size: 100% 100%;
+  }
   .main {
     height: auto;
   }
